// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeComfyWorkflow 夹具快照(09-08 二期) > krea2_edit_ref:双参考图——2 图口(LoadImage),指令口带极性 1`] = `
{
  "classTypesUsed": [
    "CLIPLoader",
    "EmptySD3LatentImage",
    "GetImageSize+",
    "ImageScaleToTotalPixels",
    "KSampler",
    "Krea2EditGroundedEncode",
    "Krea2EditModelPatch",
    "LoadImage",
    "LoraLoaderModelOnly",
    "SaveImage",
    "UNETLoader",
    "VAEDecode",
    "VAEEncode",
    "VAELoader",
  ],
  "missing": [],
  "nodeCount": 18,
  "ports": [
    {
      "id": "34.prompt",
      "inputKey": "prompt",
      "label": "负向提示词",
      "nodeId": "34",
      "polarity": "negative",
      "type": "prompt-text",
    },
    {
      "id": "36.prompt",
      "inputKey": "prompt",
      "label": "正向提示词",
      "nodeId": "36",
      "polarity": "positive",
      "type": "prompt-text",
    },
    {
      "id": "45.image",
      "inputKey": "image",
      "label": "参考图 1",
      "nodeId": "45",
      "type": "image",
    },
    {
      "id": "46.image",
      "inputKey": "image",
      "label": "参考图 2",
      "nodeId": "46",
      "type": "image",
    },
  ],
  "widgets": [
    {
      "default": "MYStudio",
      "id": "27.filename_prefix",
      "inputKey": "filename_prefix",
      "label": "文件名前缀",
      "nodeId": "27",
      "type": "STRING",
    },
    {
      "default": 1024,
      "id": "28.width",
      "inputKey": "width",
      "label": "宽度",
      "nodeId": "28",
      "type": "INT",
    },
    {
      "default": 1024,
      "id": "28.height",
      "inputKey": "height",
      "label": "高度",
      "nodeId": "28",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "28.batch_size",
      "inputKey": "batch_size",
      "label": "每批数量",
      "nodeId": "28",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "30.seed",
      "inputKey": "seed",
      "label": "随机种子",
      "nodeId": "30",
      "type": "INT",
    },
    {
      "default": 10,
      "id": "30.steps",
      "inputKey": "steps",
      "label": "步数",
      "nodeId": "30",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "30.cfg",
      "inputKey": "cfg",
      "label": "提示词强度",
      "nodeId": "30",
      "type": "INT",
    },
    {
      "default": "euler",
      "id": "30.sampler_name",
      "inputKey": "sampler_name",
      "label": "采样器",
      "nodeId": "30",
      "type": "COMBO",
    },
    {
      "default": "simple",
      "id": "30.scheduler",
      "inputKey": "scheduler",
      "label": "调度器",
      "nodeId": "30",
      "type": "COMBO",
    },
    {
      "default": 1,
      "id": "30.denoise",
      "inputKey": "denoise",
      "label": "重绘幅度",
      "nodeId": "30",
      "type": "INT",
    },
    {
      "default": 0,
      "id": "34.grounding_px",
      "inputKey": "grounding_px",
      "label": "定位像素",
      "nodeId": "34",
      "type": "INT",
    },
    {
      "default": "",
      "id": "34.system_prompt",
      "inputKey": "system_prompt",
      "label": "系统提示词",
      "nodeId": "34",
      "type": "STRING",
    },
    {
      "default": 4,
      "id": "35.ref_boost",
      "inputKey": "ref_boost",
      "label": "参考增强",
      "nodeId": "35",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "35.ref_boost_a",
      "inputKey": "ref_boost_a",
      "label": "参考增强A",
      "nodeId": "35",
      "type": "INT",
    },
    {
      "default": "fit",
      "id": "35.fit_mode",
      "inputKey": "fit_mode",
      "label": "适配模式",
      "nodeId": "35",
      "type": "COMBO",
    },
    {
      "default": 0,
      "id": "36.grounding_px",
      "inputKey": "grounding_px",
      "label": "定位像素",
      "nodeId": "36",
      "type": "INT",
    },
    {
      "default": "",
      "id": "36.system_prompt",
      "inputKey": "system_prompt",
      "label": "系统提示词",
      "nodeId": "36",
      "type": "STRING",
    },
    {
      "default": "qwen3-vl-4b-heretic.safetensors",
      "id": "40.clip_name",
      "inputKey": "clip_name",
      "label": "文本编码器",
      "nodeId": "40",
      "type": "STRING",
    },
    {
      "default": "krea2",
      "id": "40.type",
      "inputKey": "type",
      "label": "类型",
      "nodeId": "40",
      "type": "STRING",
    },
    {
      "default": "default",
      "id": "40.device",
      "inputKey": "device",
      "label": "设备",
      "nodeId": "40",
      "type": "COMBO",
    },
    {
      "default": "qwen_image_vae.safetensors",
      "id": "41.vae_name",
      "inputKey": "vae_name",
      "label": "VAE文件",
      "nodeId": "41",
      "type": "STRING",
    },
    {
      "default": "Krea2-功能/Krea2-编辑identity_edit_v1_2.safetensors",
      "id": "42.lora_name",
      "inputKey": "lora_name",
      "label": "LoRA文件",
      "nodeId": "42",
      "type": "STRING",
    },
    {
      "default": 1,
      "id": "42.strength_model",
      "inputKey": "strength_model",
      "label": "模型强度",
      "nodeId": "42",
      "type": "INT",
    },
    {
      "default": "krea2_turbo_bf16.safetensors",
      "id": "43.unet_name",
      "inputKey": "unet_name",
      "label": "模型文件",
      "nodeId": "43",
      "type": "STRING",
    },
    {
      "default": "default",
      "id": "43.weight_dtype",
      "inputKey": "weight_dtype",
      "label": "精度",
      "nodeId": "43",
      "type": "COMBO",
    },
    {
      "default": "",
      "id": "45.image",
      "inputKey": "image",
      "label": "图片文件",
      "nodeId": "45",
      "type": "STRING",
    },
    {
      "default": "",
      "id": "46.image",
      "inputKey": "image",
      "label": "图片文件",
      "nodeId": "46",
      "type": "STRING",
    },
    {
      "default": "lanczos",
      "id": "51.upscale_method",
      "inputKey": "upscale_method",
      "label": "放大算法",
      "nodeId": "51",
      "type": "COMBO",
    },
    {
      "default": 1,
      "id": "51.megapixels",
      "inputKey": "megapixels",
      "label": "目标百万像素",
      "nodeId": "51",
      "type": "INT",
    },
    {
      "default": 8,
      "id": "51.resolution_steps",
      "inputKey": "resolution_steps",
      "label": "分辨率步进",
      "nodeId": "51",
      "type": "INT",
    },
    {
      "default": "lanczos",
      "id": "52.upscale_method",
      "inputKey": "upscale_method",
      "label": "放大算法",
      "nodeId": "52",
      "type": "COMBO",
    },
    {
      "default": 1,
      "id": "52.megapixels",
      "inputKey": "megapixels",
      "label": "目标百万像素",
      "nodeId": "52",
      "type": "INT",
    },
    {
      "default": 8,
      "id": "52.resolution_steps",
      "inputKey": "resolution_steps",
      "label": "分辨率步进",
      "nodeId": "52",
      "type": "INT",
    },
  ],
}
`;

exports[`analyzeComfyWorkflow 夹具快照(09-08 二期) > krea2_nsfw_pro:classTypesUsed 断言(NSFW专业流节点全录) 1`] = `
{
  "classTypesUsed": [
    "CLIPLoader",
    "CLIPTextEncode",
    "ConditioningKrea2Rebalance",
    "ConditioningZeroOut",
    "EmptyLatentImage",
    "KSampler",
    "LoraLoaderModelOnly",
    "SaveImage",
    "UNETLoader",
    "VAEDecode",
    "VAELoader",
  ],
  "missing": [],
  "nodeCount": 13,
  "ports": [
    {
      "id": "55.text",
      "inputKey": "text",
      "label": "提示词",
      "nodeId": "55",
      "type": "prompt-text",
    },
    {
      "id": "80.text",
      "inputKey": "text",
      "label": "负向提示词",
      "nodeId": "80",
      "polarity": "negative",
      "type": "prompt-text",
    },
  ],
  "widgets": [
    {
      "default": "MYStudio",
      "id": "29.filename_prefix",
      "inputKey": "filename_prefix",
      "label": "文件名前缀",
      "nodeId": "29",
      "type": "STRING",
    },
    {
      "default": 1024,
      "id": "56.width",
      "inputKey": "width",
      "label": "宽度",
      "nodeId": "56",
      "type": "INT",
    },
    {
      "default": 1024,
      "id": "56.height",
      "inputKey": "height",
      "label": "高度",
      "nodeId": "56",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "56.batch_size",
      "inputKey": "batch_size",
      "label": "每批数量",
      "nodeId": "56",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "57.seed",
      "inputKey": "seed",
      "label": "随机种子",
      "nodeId": "57",
      "type": "INT",
    },
    {
      "default": 8,
      "id": "57.steps",
      "inputKey": "steps",
      "label": "步数",
      "nodeId": "57",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "57.cfg",
      "inputKey": "cfg",
      "label": "提示词强度",
      "nodeId": "57",
      "type": "INT",
    },
    {
      "default": "euler",
      "id": "57.sampler_name",
      "inputKey": "sampler_name",
      "label": "采样器",
      "nodeId": "57",
      "type": "COMBO",
    },
    {
      "default": "simple",
      "id": "57.scheduler",
      "inputKey": "scheduler",
      "label": "调度器",
      "nodeId": "57",
      "type": "COMBO",
    },
    {
      "default": 1,
      "id": "57.denoise",
      "inputKey": "denoise",
      "label": "重绘幅度",
      "nodeId": "57",
      "type": "INT",
    },
    {
      "default": "krea2_turbo_bf16.safetensors",
      "id": "59.unet_name",
      "inputKey": "unet_name",
      "label": "模型文件",
      "nodeId": "59",
      "type": "STRING",
    },
    {
      "default": "default",
      "id": "59.weight_dtype",
      "inputKey": "weight_dtype",
      "label": "精度",
      "nodeId": "59",
      "type": "COMBO",
    },
    {
      "default": "qwen3-vl-4b-heretic.safetensors",
      "id": "60.clip_name",
      "inputKey": "clip_name",
      "label": "文本编码器",
      "nodeId": "60",
      "type": "STRING",
    },
    {
      "default": "krea2",
      "id": "60.type",
      "inputKey": "type",
      "label": "类型",
      "nodeId": "60",
      "type": "STRING",
    },
    {
      "default": "default",
      "id": "60.device",
      "inputKey": "device",
      "label": "设备",
      "nodeId": "60",
      "type": "COMBO",
    },
    {
      "default": "qwen_image_vae.safetensors",
      "id": "61.vae_name",
      "inputKey": "vae_name",
      "label": "VAE文件",
      "nodeId": "61",
      "type": "STRING",
    },
    {
      "default": "Krea2-NSFW/KREA 2 Mystic XXX v3.safetensors",
      "id": "75.lora_name",
      "inputKey": "lora_name",
      "label": "LoRA文件",
      "nodeId": "75",
      "type": "STRING",
    },
    {
      "default": 1,
      "id": "75.strength_model",
      "inputKey": "strength_model",
      "label": "模型强度",
      "nodeId": "75",
      "type": "INT",
    },
    {
      "default": "Krea2-NSFW/Krea 2 pussy.safetensors",
      "id": "78.lora_name",
      "inputKey": "lora_name",
      "label": "LoRA文件",
      "nodeId": "78",
      "type": "STRING",
    },
    {
      "default": 0.3,
      "id": "78.strength_model",
      "inputKey": "strength_model",
      "label": "模型强度",
      "nodeId": "78",
      "type": "FLOAT",
    },
    {
      "default": 1,
      "id": "79.multiplier",
      "inputKey": "multiplier",
      "label": "倍率",
      "nodeId": "79",
      "type": "INT",
    },
    {
      "default": "1.0,1.0,1.0,1.0,1.0,1.0,1.0,1.0,5.0,1.0,1.0,1.0",
      "id": "79.per_layer_weights",
      "inputKey": "per_layer_weights",
      "label": "分层权重",
      "nodeId": "79",
      "type": "STRING",
    },
  ],
}
`;

exports[`analyzeComfyWorkflow 夹具快照(09-08 二期) > krea2_t2i:文生图——≥1 提示词口(正/负极性各一),无图口 1`] = `
{
  "classTypesUsed": [
    "CLIPLoader",
    "CLIPTextEncode",
    "ConditioningZeroOut",
    "EmptyLatentImage",
    "KSampler",
    "SaveImage",
    "UNETLoader",
    "VAEDecode",
    "VAELoader",
  ],
  "missing": [],
  "nodeCount": 10,
  "ports": [
    {
      "id": "6.text",
      "inputKey": "text",
      "label": "正向提示词",
      "nodeId": "6",
      "polarity": "positive",
      "type": "prompt-text",
    },
    {
      "id": "13.text",
      "inputKey": "text",
      "label": "负向提示词",
      "nodeId": "13",
      "polarity": "negative",
      "type": "prompt-text",
    },
  ],
  "widgets": [
    {
      "default": "krea2_turbo_bf16.safetensors",
      "id": "3.unet_name",
      "inputKey": "unet_name",
      "label": "模型文件",
      "nodeId": "3",
      "type": "STRING",
    },
    {
      "default": "default",
      "id": "3.weight_dtype",
      "inputKey": "weight_dtype",
      "label": "精度",
      "nodeId": "3",
      "type": "COMBO",
    },
    {
      "default": "qwen3-vl-4b-heretic.safetensors",
      "id": "5.clip_name",
      "inputKey": "clip_name",
      "label": "文本编码器",
      "nodeId": "5",
      "type": "STRING",
    },
    {
      "default": "krea2",
      "id": "5.type",
      "inputKey": "type",
      "label": "类型",
      "nodeId": "5",
      "type": "STRING",
    },
    {
      "default": "default",
      "id": "5.device",
      "inputKey": "device",
      "label": "设备",
      "nodeId": "5",
      "type": "COMBO",
    },
    {
      "default": 1024,
      "id": "8.width",
      "inputKey": "width",
      "label": "宽度",
      "nodeId": "8",
      "type": "INT",
    },
    {
      "default": 1024,
      "id": "8.height",
      "inputKey": "height",
      "label": "高度",
      "nodeId": "8",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "8.batch_size",
      "inputKey": "batch_size",
      "label": "每批数量",
      "nodeId": "8",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "9.seed",
      "inputKey": "seed",
      "label": "随机种子",
      "nodeId": "9",
      "type": "INT",
    },
    {
      "default": 8,
      "id": "9.steps",
      "inputKey": "steps",
      "label": "步数",
      "nodeId": "9",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "9.cfg",
      "inputKey": "cfg",
      "label": "提示词强度",
      "nodeId": "9",
      "type": "INT",
    },
    {
      "default": "euler",
      "id": "9.sampler_name",
      "inputKey": "sampler_name",
      "label": "采样器",
      "nodeId": "9",
      "type": "COMBO",
    },
    {
      "default": "simple",
      "id": "9.scheduler",
      "inputKey": "scheduler",
      "label": "调度器",
      "nodeId": "9",
      "type": "COMBO",
    },
    {
      "default": 1,
      "id": "9.denoise",
      "inputKey": "denoise",
      "label": "重绘幅度",
      "nodeId": "9",
      "type": "INT",
    },
    {
      "default": "qwen_image_vae.safetensors",
      "id": "10.vae_name",
      "inputKey": "vae_name",
      "label": "VAE文件",
      "nodeId": "10",
      "type": "STRING",
    },
    {
      "default": "MYStudio",
      "id": "12.filename_prefix",
      "inputKey": "filename_prefix",
      "label": "文件名前缀",
      "nodeId": "12",
      "type": "STRING",
    },
  ],
}
`;

exports[`analyzeComfyWorkflow 夹具快照(09-08 二期) > krea2_uncloth_instruct:单参考图——1 图口,双指令口 1`] = `
{
  "classTypesUsed": [
    "CLIPLoader",
    "EmptySD3LatentImage",
    "GetImageSize+",
    "ImageScaleToTotalPixels",
    "KSampler",
    "Krea2EditGroundedEncode",
    "Krea2EditModelPatch",
    "LoadImage",
    "LoraLoaderModelOnly",
    "SaveImage",
    "UNETLoader",
    "VAEDecode",
    "VAEEncode",
    "VAELoader",
  ],
  "missing": [],
  "nodeCount": 15,
  "ports": [
    {
      "id": "34.prompt",
      "inputKey": "prompt",
      "label": "负向提示词",
      "nodeId": "34",
      "polarity": "negative",
      "type": "prompt-text",
    },
    {
      "id": "36.prompt",
      "inputKey": "prompt",
      "label": "正向提示词",
      "nodeId": "36",
      "polarity": "positive",
      "type": "prompt-text",
    },
    {
      "id": "45.image",
      "inputKey": "image",
      "label": "参考图 1",
      "nodeId": "45",
      "type": "image",
    },
  ],
  "widgets": [
    {
      "default": "MYStudio",
      "id": "27.filename_prefix",
      "inputKey": "filename_prefix",
      "label": "文件名前缀",
      "nodeId": "27",
      "type": "STRING",
    },
    {
      "default": 1024,
      "id": "28.width",
      "inputKey": "width",
      "label": "宽度",
      "nodeId": "28",
      "type": "INT",
    },
    {
      "default": 1024,
      "id": "28.height",
      "inputKey": "height",
      "label": "高度",
      "nodeId": "28",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "28.batch_size",
      "inputKey": "batch_size",
      "label": "每批数量",
      "nodeId": "28",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "30.seed",
      "inputKey": "seed",
      "label": "随机种子",
      "nodeId": "30",
      "type": "INT",
    },
    {
      "default": 8,
      "id": "30.steps",
      "inputKey": "steps",
      "label": "步数",
      "nodeId": "30",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "30.cfg",
      "inputKey": "cfg",
      "label": "提示词强度",
      "nodeId": "30",
      "type": "INT",
    },
    {
      "default": "euler",
      "id": "30.sampler_name",
      "inputKey": "sampler_name",
      "label": "采样器",
      "nodeId": "30",
      "type": "COMBO",
    },
    {
      "default": "simple",
      "id": "30.scheduler",
      "inputKey": "scheduler",
      "label": "调度器",
      "nodeId": "30",
      "type": "COMBO",
    },
    {
      "default": 1,
      "id": "30.denoise",
      "inputKey": "denoise",
      "label": "重绘幅度",
      "nodeId": "30",
      "type": "INT",
    },
    {
      "default": 0,
      "id": "34.grounding_px",
      "inputKey": "grounding_px",
      "label": "定位像素",
      "nodeId": "34",
      "type": "INT",
    },
    {
      "default": "",
      "id": "34.system_prompt",
      "inputKey": "system_prompt",
      "label": "系统提示词",
      "nodeId": "34",
      "type": "STRING",
    },
    {
      "default": 1,
      "id": "35.ref_boost",
      "inputKey": "ref_boost",
      "label": "参考增强",
      "nodeId": "35",
      "type": "INT",
    },
    {
      "default": 1,
      "id": "35.ref_boost_a",
      "inputKey": "ref_boost_a",
      "label": "参考增强A",
      "nodeId": "35",
      "type": "INT",
    },
    {
      "default": "fit",
      "id": "35.fit_mode",
      "inputKey": "fit_mode",
      "label": "适配模式",
      "nodeId": "35",
      "type": "COMBO",
    },
    {
      "default": 0,
      "id": "36.grounding_px",
      "inputKey": "grounding_px",
      "label": "定位像素",
      "nodeId": "36",
      "type": "INT",
    },
    {
      "default": "",
      "id": "36.system_prompt",
      "inputKey": "system_prompt",
      "label": "系统提示词",
      "nodeId": "36",
      "type": "STRING",
    },
    {
      "default": "qwen3-vl-4b-heretic.safetensors",
      "id": "40.clip_name",
      "inputKey": "clip_name",
      "label": "文本编码器",
      "nodeId": "40",
      "type": "STRING",
    },
    {
      "default": "krea2",
      "id": "40.type",
      "inputKey": "type",
      "label": "类型",
      "nodeId": "40",
      "type": "STRING",
    },
    {
      "default": "default",
      "id": "40.device",
      "inputKey": "device",
      "label": "设备",
      "nodeId": "40",
      "type": "COMBO",
    },
    {
      "default": "qwen_image_vae.safetensors",
      "id": "41.vae_name",
      "inputKey": "vae_name",
      "label": "VAE文件",
      "nodeId": "41",
      "type": "STRING",
    },
    {
      "default": "Krea2-功能/Krea2-编辑identity_edit_v1_2.safetensors",
      "id": "42.lora_name",
      "inputKey": "lora_name",
      "label": "LoRA文件",
      "nodeId": "42",
      "type": "STRING",
    },
    {
      "default": 1,
      "id": "42.strength_model",
      "inputKey": "strength_model",
      "label": "模型强度",
      "nodeId": "42",
      "type": "INT",
    },
    {
      "default": "krea2_turbo_bf16.safetensors",
      "id": "43.unet_name",
      "inputKey": "unet_name",
      "label": "模型文件",
      "nodeId": "43",
      "type": "STRING",
    },
    {
      "default": "default",
      "id": "43.weight_dtype",
      "inputKey": "weight_dtype",
      "label": "精度",
      "nodeId": "43",
      "type": "COMBO",
    },
    {
      "default": "",
      "id": "45.image",
      "inputKey": "image",
      "label": "图片文件",
      "nodeId": "45",
      "type": "STRING",
    },
    {
      "default": "lanczos",
      "id": "51.upscale_method",
      "inputKey": "upscale_method",
      "label": "放大算法",
      "nodeId": "51",
      "type": "COMBO",
    },
    {
      "default": 1,
      "id": "51.megapixels",
      "inputKey": "megapixels",
      "label": "目标百万像素",
      "nodeId": "51",
      "type": "INT",
    },
    {
      "default": 8,
      "id": "51.resolution_steps",
      "inputKey": "resolution_steps",
      "label": "分辨率步进",
      "nodeId": "51",
      "type": "INT",
    },
  ],
}
`;
